--- a/package.json
+++ b/package.json
@@ -11,5 +11,5 @@
     "url": "https://github.com/m1guelpf/gbatemp-desktop/issues"
   },
   "license": "MIT",
-  "electronVersion": "1.3.13",
+  "electronVersion": "1.3.13"
 }
